# HaskellExercises

./: LICENSE  README.md
CH03/: .gitignore  CH03.cabal  ChangeLog.md  README.md  package.yaml
CH03/app/: Main.hs
CH03/src/: Lib.hs
CH15/: CH15.cabal  README.md
CH15/app/: Main.hs
CH15/src/: Lib.hs
CH16/: CH16.cabal  README.md  stack.yaml
CH16/app/: Main.hs
CH16/src/: Lib.hs
CH17/: CH17.cabal  README.md
CH17/app/: Main.hs
CH17/src/: Lib.hs
CH18/: CH18.cabal
CH18/app/: Main.hs
CH18/src/: Lib.hs
CH20/: CH20.cabal  README.md
CH20/app/: Main.hs
CH20/src/: Lib.hs
CH21/: CH21.cabal  README.md
CH21/app/: Main.hs
CH21/src/: Lib.hs
CH22/: CH22.cabal  README.md
CH22/app/: Main.hs
CH22/src/: Lib.hs
CH23/: CH23.cabal  README.md
CH23/app/: Main.hs
CH23/src/: Lib.hs
CH24/: .gitignore  ChangeLog.md  README.md  package.yaml
CH24/app/: Main.hs
CH24/src/: Lib.hs
CH25/: CH25.cabal  README.md
CH25/app/: Main.hs
CH25/src/: Lib.hs
CH26/: CH26.cabal  README.md
CH26/app/: Main.hs
CH26/src/: Lib.hs
CH27/: CH27.cabal  README.md
CH27/app/: Main.hs
CH27/src/: Lib.hs  StrictList.hs
