name:                CH23
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/backofhan/HaskellExercises#readme
license:             BSD3
-- license-file:        LICENSE
author:              Xiaofeng Ge
maintainer:          backofhan@gmail.com
copyright:           2017 Xiafeng Ge
category:            Haskell Exercises
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , checkers
                     , random
                     , dlist
                     , transformers
  default-language:    Haskell2010

executable CH23-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CH23
                     , QuickCheck
                     , checkers
  default-language:    Haskell2010

test-suite CH23-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CH23
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/backofhan/HaskellExercises
